--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,24 +2,48 @@ version: 2
 jobs:
   build:
     docker:
-      - image: 218546966473.dkr.ecr.us-east-1.amazonaws.com/circle-ci:tap-tester
+      - image: 218546966473.dkr.ecr.us-east-1.amazonaws.com/circle-ci:stitch-tap-tester
     steps:
       - checkout
       - run:
           name: 'Setup virtual env'
           command: |
-            python3 -mvenv /usr/local/share/virtualenvs/tap-iterable
-            source /usr/local/share/virtualenvs/tap-iterable/bin/activate
-            pip install -U 'pip<19.2' setuptools
+            python3 -mvenv /usr/local/share/virtualenvs/tap-appsflyer
+            source /usr/local/share/virtualenvs/tap-appsflyer/bin/activate
+            pip install -U 'pip<19.2' 'setuptools<51.0.0'
             pip install .[dev]
+            pip install pylint
       - run:
           name: 'pylint'
           command: |
-            source /usr/local/share/virtualenvs/tap-iterable/bin/activate
-            make test
+            source /usr/local/share/virtualenvs/tap-appsflyer/bin/activate
+            pylint tap_iterable -d C,R,W
+      # - run:
+      #     name: 'Unit Tests'
+      #     command: |
+      #       source /usr/local/share/virtualenvs/tap-appsflyer/bin/activate
+      #       pip install coverage
+      #       pip install nose coverage parameterized
+      #       nosetests --with-coverage --cover-erase --cover-package=tap_iterable --cover-html-dir=htmlcov tests/unittests
+            coverage html
+      - store_test_results:
+          path: test_output/report.xml
+      - store_artifacts:
+          path: htmlcov
 workflows:
   version: 2
   commit:
+    jobs:
+      - build:
+          context: circleci-user
+  build_daily:
+    triggers:
+      - schedule:
+          cron: "0 0 * * *"
+          filters:
+            branches:
+              only:
+                - master
     jobs:
       - build:
           context: circleci-user
