--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,9 @@ jobs:
           command: |
             uv venv --python=3.9 /usr/local/share/virtualenvs/tap-iterable
             source /usr/local/share/virtualenvs/tap-iterable/bin/activate
-            pip install -U 'pip<19.2' 'setuptools<51.0.0'
-            pip install .[dev]
-            pip install pylint
+            uv pip install -U 'pip<19.2' 'setuptools<51.0.0'
+            uv pip install .[dev]
+            uv pip install pylint
       - run:
           name: 'pylint'
           command: |
@@ -22,8 +22,8 @@ jobs:
           name: 'Unit Tests'
           command: |
             source /usr/local/share/virtualenvs/tap-iterable/bin/activate
-            pip install coverage
-            pip install nose coverage parameterized
+            uv pip install coverage
+            uv pip install nose coverage parameterized
             nosetests --with-coverage --cover-erase --cover-package=tap_iterable --cover-html-dir=htmlcov tests/unittests
             coverage html
       - run:
